--- a/spring-study/ioc/s04/pom.xml
+++ b/spring-study/ioc/s04/pom.xml
@@ -21,7 +21,11 @@
             <version>5.2.6.RELEASE</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
 
 
     </dependencies>
